# libjoybus

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  annotated.html  annotated_dup.js  attributes_8h_source.html  bus_8h_source.html  checksum_8h_source.html  classes.html  commands_8h.html  commands_8h.js  commands_8h_source.html  common_2gcn__controller_8h.html  common_2gcn__controller_8h.js  common_2gcn__controller_8h_source.html  common_2n64__controller_8h.html  common_2n64__controller_8h.js  common_2n64__controller_8h_source.html  common_8h_source.html  crc8_8h_source.html  custom.css  dir_11bfe2aeffd25593654c3f2cacc8984c.html  dir_11bfe2aeffd25593654c3f2cacc8984c.js  dir_1fad809fccac7d7f013228ef7c654cc2.html  dir_2fab1df6832ac5fd5ad2dca443afcb3d.html  dir_3f615ade772d23cefe5e20dcb18424a2.html  dir_3f615ade772d23cefe5e20dcb18424a2.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7f49758eceac96639539101177dad3c0.html  dir_84e79ac80b913c2fb5b9e077744e9498.html  dir_852c1f860c0e1668d92578290afc3183.html  dir_8c5bca25a498c7ed0874b721ecc37dfa.html  dir_a0af1123aa73b425e6696dc25ded3916.html  dir_a5951e18549d21f91acffc8bcafe0689.html  dir_a5951e18549d21f91acffc8bcafe0689.js  dir_a911a896560fe58267b68c80d792d071.html  (+149 more)
.github/workflows/: doxygen.yml  esp32_examples.yml  gecko_examples.yml  pico_examples.yml  test.yml
cmake/: esp-idf.cmake
docs/: Makefile  api.md  bus.md  commands.md  conf.py  errors.md  index.md  protocol.md  requirements.txt  targets.md
docs/_doxygen/: custom.css  custom.js  groups.dox  header.html
examples/esp32/gcn-adapter-usb-hid/: .gitignore  CMakeLists.txt  sdkconfig.defaults
examples/esp32/gcn-adapter-usb-hid/main/: idf_component.yml  main.c
examples/esp32/gcn-host/: CMakeLists.txt  sdkconfig.defaults
examples/esp32/gcn-host/main/: CMakeLists.txt  idf_component.yml  main.c
examples/esp32/gcn-target/: .gitignore  CMakeLists.txt  sdkconfig.defaults
examples/esp32/gcn-target/main/: main.c
examples/esp32/n64-adapter-usb-hid/: CMakeLists.txt
examples/esp32/n64-adapter-usb-hid/main/: CMakeLists.txt  main.c
examples/esp32/n64-host/: CMakeLists.txt
examples/esp32/n64-host/main/: main.c
examples/esp32/n64-target/: CMakeLists.txt
examples/esp32/n64-target/main/: CMakeLists.txt  main.c
examples/gecko/gcn-host/: .clangd  .gitignore  README.md  app.c  app.slcp  gcn_host.slcp  libjoybus_example.slcp  main.c
examples/gecko/gcn-target/: .clangd  CMakeLists.txt  README.md  app.c  app.slcp  gcn_target.slcp  libjoybus_example.slcp  main.c
examples/pico-sdk/gcc-adapter/: CMakeLists.txt  README.md  tusb_config.h  usb_descriptors.c
examples/pico-sdk/gcc-adapter-simple/: CMakeLists.txt  README.md  tusb_config.h
examples/pico-sdk/gcn-adapter-ds4/: CMakeLists.txt  README.md  main.c  usb_descriptors.c
examples/pico-sdk/gcn-adapter-nintendo/: CMakeLists.txt  README.md  config.h  main.c  report_ids.h
examples/pico-sdk/gcn-adapter-usb-hid/: CMakeLists.txt  README.md  main.c  usb_descriptors.c
examples/pico-sdk/gcn-controller-target/: CMakeLists.txt  README.md  main.c
examples/pico-sdk/gcn-controller-target/usb_serial/: CMakeLists.txt  README.txt  main.c
examples/pico-sdk/gcn-host/: CMakeLists.txt  README.md  main.c
examples/pico-sdk/gcn-target/: CMakeLists.txt  README.md  main.c
examples/pico-sdk/joybus-shell/: CMakeLists.txt  README.md  main.c
examples/pico-sdk/n64-adapter-usb-hid/: CMakeLists.txt  README.md  main.c  usb_descriptors.c
examples/pico-sdk/n64-dump-eeprom/: CMakeLists.txt  main.c
examples/pico-sdk/n64-host/: CMakeLists.txt  README.md  main.c
examples/pico-sdk/n64-target/: CMakeLists.txt  README.md  main.c
examples/zephyr/: .gitignore
examples/zephyr/gcn-host/: main.c  prj.conf
examples/zephyr/joybus-shell/: README.md  main.c  prj.conf  west.yml
examples/zephyr/n64-host/: CMakeLists.txt  main.c  prj.conf
include/joybus/: attributes.h  bus.h  checksum.h  commands.h  crc8.h  errors.h  gamecube.h  identify.h  joybus.h  n64.h  target.h
include/joybus/backend/: esp32.h  gecko.h  loopback.h  ogc.h  rp2xxx.h
include/joybus/common/: gcn_controller.h  n64_controller.h
include/joybus/host/: common.h  gamecube.h  gcn.h  n64.h  n64_rumble_pak.h  n64_vru.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  enums_0.js  enumvalues_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  groups_7.js  groups_8.js  groups_a.js  groups_b.js  pages_0.js  (+26 more)
src/: bus.c  checksum.c  crc8.c
src/backend/esp32/: joybus.c
src/backend/gecko/: README.md  joybus.c
src/backend/gecko_sdk/: CMakeLists.txt  joybus.c
src/backend/loopback/: README.md  joybus.c
src/backend/ogc/: joybus.c
src/backend/rp2xxx/: CMakeLists.txt  README.md  joybus.c  joybus_host.pio  joybus_target.pio
src/host/: common.c  gamecube.c  gcn.c  n64.c  n64_rumble_pak.c  n64_vru.c
test/: CMakeLists.txt  test_checksum.c
zephyr/: CMakeLists.txt  module.yml
